# rat-inference

./: .gitignore  README.md  TRAINING_GUIDE.md  extract-frames.sh  gpio_test.py  inference.py  labeler.py  main.py  pyproject.toml  rename-negative.sh  rt_100.py  run-inference.sh  run.sh  servo_test.py  train.py
datasets/rat/: .processed_images.json  rat_dataset.yaml
datasets/rat/labels/: train.cache  val.cache
datasets/rat/labels/train/: Rep_20250815023210_20250815023226_9527000IAK81G4OS_0. 2.MP4_0001.txt  Rep_20250815023210_20250815023226_9527000IAK81G4OS_0. 2.MP4_0002.txt  Rep_20250815023210_20250815023226_9527000IAK81G4OS_0. 2.MP4_0006.txt  Rep_20250815023210_20250815023226_9527000IAK81G4OS_0. 2.MP4_0007.txt  Rep_20250815195850_20250815195858_9527000IAK81G4OS_0..MP4_0001.txt  Rep_20250815195850_20250815195858_9527000IAK81G4OS_0..MP4_0004.txt  Rep_20250815195850_20250815195858_9527000IAK81G4OS_0..MP4_0008.txt  Rep_20250815195920_20250815195928_9527000IAK81G4OS_0..MP4_0003.txt  Rep_20250815195920_20250815195928_9527000IAK81G4OS_0..MP4_0009.txt  Rep_20250815195956_20250815200004_9527000IAK81G4OS_0..MP4_0002.txt  Rep_20250815195956_20250815200004_9527000IAK81G4OS_0..MP4_0004.txt  Rep_20250815200015_20250815200023_9527000IAK81G4OS_0..MP4_0003.txt  Rep_20250815200015_20250815200023_9527000IAK81G4OS_0..MP4_0007.txt  Rep_20250815200015_20250815200023_9527000IAK81G4OS_0..MP4_0008.txt  Screenshot 2025-08-16 at 9.32.15 AM.txt  (+49 more)
runs/yolo11n-2025-08-21/: args.yaml  results.csv
runs/yolo11n-2025-08-24/: args.yaml  results.csv
runs/yolo8n-2025-08-17/: args.yaml  results.csv
(+39 files in other folders)
